# aws-iam-user-manager

./: config.toml  pyproject.toml  template
src/aws_iam_user_manager/: main.py
