[project]
name = "aws-iam-user-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WP Swart", email = "wpswart006@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.25",
]

[project.scripts]
aws-iam-user-manager = "aws_iam_user_manager:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
